@@ -13,6 +13,8 @@ $_lang['pdotools_prop_hideContainers'] = 'Отключает вывод конт
 $_lang['pdotools_prop_idx'] = 'Вы можете указать стартовый номер итерации вывода результатов.';
 $_lang['pdotools_prop_includeContent'] = 'Включаем поле "content" в выборку.';
 $_lang['pdotools_prop_includeTVs'] = 'Список ТВ параметров для выборки, через запятую. Например: "action,time" дадут плейсхолдеры [[+action]] и [[+time]].';
+$_lang['pdotools_prop_prepareTVs'] = 'Список ТВ параметров, которые нужно подготовить перед выводом. По умолчанию, установлено в "1", что означает подготовку всех ТВ, указанных в "&includeTVs=``"';
+$_lang['pdotools_prop_processTVs'] = 'Список ТВ параметров, которые нужно обработать перед выводом. Если установить в "1" - будут обработаны все ТВ, указанные в "&includeTVs=``". По умолчанию параметр пуст.';
 $_lang['pdotools_prop_last'] = 'Номер последней итерации вывода результатов. По умолчанию он рассчитается автоматически, по формуле (total + first - 1).';
 $_lang['pdotools_prop_limit'] = 'Ограничение количества результатов выборки. Можно использовать "0".';
 $_lang['pdotools_prop_offset'] = 'Пропуск результатов от начала.';
