@@ -3,6 +3,7 @@ Changelog for pdoTools.
 1.6.0 beta
 ==============
 - Added parameter "&loadModels=`" for comma-separated list of 3rd party components that needed for query.
+- Added parameters "&prepareTVs=``" and "&processTVs=``".
 
 1.5.0 pl2
 ==============
